<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrlv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/ficheappel"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="ficheappel"
                android:padding="20dp"
                android:paddingBottom="40dp"
                android:scaleType="fitCenter"
                android:text="@string/ficheappel" />

            <Button
                android:id="@+id/consultabsences"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="consultabsences"
                android:padding="20dp"
                android:paddingBottom="40dp"
                android:scaleType="fitCenter"
                android:text="@string/consultabsences" />

            <Button
                android:id="@+id/consultdemandes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="consultdemandes"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:text="@string/consultdemandes" />

            <Button
                android:id="@+id/ajouteretudient"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="ajouteretudient"
                android:padding="20dp"
                android:paddingBottom="40dp"
                android:scaleType="fitCenter"
                android:text="@string/ajouteretudient" />

            <Button
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="profile"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:text="@string/profile" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="logout"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:text="@string/logout" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>